--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
+    id "org.jetbrains.kotlin.jvm" version "1.6.10"
 }
 
-group 'ru.netology'
-version '1.0-SNAPSHOT'
+group "ru.netology"
+version "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "junit:junit:4.13.2"
+
 }
